tests/baselines/reference/multipleNumericIndexers.errors.txt
multipleNumericIndexers.ts(4,5): error TS2374: Duplicate index signature for type 'number'.
multipleNumericIndexers.ts(5,5): error TS2374: Duplicate index signature for type 'number'.
multipleNumericIndexers.ts(8,11): error TS2428: All declarations of 'I' must have identical type parameters.
multipleNumericIndexers.ts(9,5): error TS2374: Duplicate index signature for type 'number'.
multipleNumericIndexers.ts(10,5): error TS2374: Duplicate index signature for type 'number'.
multipleNumericIndexers.ts(14,5): error TS2374: Duplicate index signature for type 'number'.
multipleNumericIndexers.ts(15,5): error TS2374: Duplicate index signature for type 'number'.
multipleNumericIndexers.ts(19,5): error TS2374: Duplicate index signature for type 'number'.
multipleNumericIndexers.ts(20,5): error TS2374: Duplicate index signature for type 'number'.
multipleNumericIndexers.ts(24,5): error TS2374: Duplicate index signature for type 'number'.
multipleNumericIndexers.ts(25,5): error TS2374: Duplicate index signature for type 'number'.
multipleNumericIndexers.ts(28,11): error TS2428: All declarations of 'I' must have identical type parameters.
multipleNumericIndexers.ts(29,5): error TS2374: Duplicate index signature for type 'number'.
multipleNumericIndexers.ts(30,5): error TS2374: Duplicate index signature for type 'number'.


==== multipleNumericIndexers.ts (14 errors) ====
    // Multiple indexers of the same type are an error
    
    class C {
        [x: number]: string;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2374: Duplicate index signature for type 'number'.
        [x: number]: string;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2374: Duplicate index signature for type 'number'.
    }
    
    interface I {
              ~
!!! error TS2428: All declarations of 'I' must have identical type parameters.
        [x: number]: string;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2374: Duplicate index signature for type 'number'.
        [x: number]: string;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2374: Duplicate index signature for type 'number'.
    }
    
    var a: {
        [x: number]: string;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2374: Duplicate index signature for type 'number'.
        [x: number]: string;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2374: Duplicate index signature for type 'number'.
    }
    
    var b: {
        [x: number]: string;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2374: Duplicate index signature for type 'number'.
        [x: number]: string
        ~~~~~~~~~~~~~~~~~~~
!!! error TS2374: Duplicate index signature for type 'number'.
    } = { 1: '', "2": '' }
    
    class C2<T> {
        [x: number]: string;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2374: Duplicate index signature for type 'number'.
        [x: number]: string;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2374: Duplicate index signature for type 'number'.
    }
    
    interface I<T> {
              ~
!!! error TS2428: All declarations of 'I' must have identical type parameters.
        [x: number]: string;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2374: Duplicate index signature for type 'number'.
        [x: number]: string;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2374: Duplicate index signature for type 'number'.
    }
    